--- a/MAKEFILE
+++ b/MAKEFILE
@@ -1,5 +1,6 @@
 #objects
-OBJS= main.o
+OBJS= main.o my_string.o
+
 
 #compiler flags -g for debug -O3 for optimization
 CFLAGS= -g -O3
@@ -18,3 +19,4 @@ run: main
 clean:
 	rm -f *.o main
 
+my_string.o: my_string.c my_string.h
