--- a/MAKEFILE
+++ b/MAKEFILE
@@ -1,6 +1,7 @@
 #objects
 OBJS= main.o my_string.o
 
+CC= cc 
 
 #compiler flags -g for debug -O3 for optimization
 CFLAGS= -g -O3
@@ -10,7 +11,7 @@ all: main
 %.o: %.c
 	${CC} ${CFLAGS} -c -o $@ $<
 
-main: ${OBJS} main.o mystring.o
+main: ${OBJS} main.o 
 	${CC} -o $@ $^
 
 run: main
