--- a/MAKEFILE
+++ b/MAKEFILE
@@ -6,7 +6,8 @@ OBJS= main.o my_string.o
 
 
 #compiler flags -g for debug -O3 for optimization
-CFLAGS= -g -O3
+CFLAGS= -O3 -g3 -Wall -Wextra -Werror=format-security -Werror=implicit-function-declaration \
+        -Wshadow -Wpointer-arith -Wcast-align -Wstrict-prototypes -Wwrite-strings
 
 all: main
 
