--- a/MAKEFILE
+++ b/MAKEFILE
@@ -1,7 +1,7 @@
 #compiler
 CC= cc 
 #objects
-OBJS= main.o my_string.o
+OBJS= my_string.o
 
 
 
@@ -24,4 +24,4 @@ clean:
 	rm -f *.o main
 
 my_string.o: my_string.c my_string.h
-main.o: main.c
+#main.o: main.c
